@@ -179,7 +179,6 @@ main(int argc, char **argv)
 	permanently_set_uid(pw);
 
 	seed_rng();
-	arc4random_stir();
 
 #ifdef DEBUG_SSH_KEYSIGN
 	log_init("ssh-keysign", SYSLOG_LEVEL_DEBUG3, SYSLOG_FACILITY_AUTH, 0);
